test_suite/syntax_test_cases/reservedWords.ast
-- Test: reservedWords.wacc

-- Uploaded file: 
---------------------------------------------------------------
# reserved keywords

# Output:
# #syntax_error#

# Exit:
# 100


# Program:

begin
  int is() is
    return 0 
  end
  skip
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 13:6 -- no viable alternative at input 'intis'
1 parser error(s) detected, no further compilation attempted.

